# memoco

./: README.md
project01/: CMakeLists.txt
project01/data/10/: boolean-matrix-10-3.txt  distance-matrix-10-1.txt  distance-matrix-10-3.txt
project01/data/100/: boolean-matrix-100-1.txt  distance-matrix-100-0.txt  distance-matrix-100-3.txt
project01/data/100-not-ok/: boolean-matrix-100-3.txt  boolean-matrix-100-31.txt  distance-matrix-100-31.txt
project01/data/100-ok/: boolean-matrix-100-3.txt
project01/data/150/: boolean-matrix-150-0.txt  boolean-matrix-150-1.txt  boolean-matrix-150-2.txt  boolean-matrix-150-3.txt  boolean-matrix-150-4.txt  distance-matrix-150-0.txt  distance-matrix-150-1.txt  distance-matrix-150-2.txt  distance-matrix-150-3.txt
project01/data/25/: boolean-matrix-25-3.txt
project01/data/25bis/: boolean-matrix-25-0.txt
project01/data/50/: boolean-matrix-50-1.txt  boolean-matrix-50-2.txt  distance-matrix-50-3.txt
project01/data/lp/: 10-0-20240222_160342.lp  10-2-20240222_160342.lp  10-4-20240222_160342.lp  25-0-20240222_160343.lp  25-3-20240222_160343.lp  50-2-20240222_160346.lp  50-4-20240222_160346.lp
project01/data/results/: cplex-results.csv  results-10-20240222_160342.csv  results-10-20240222_215814.csv  results-100-20240222_215832.csv  (+5 more)
project01/src/: FileManager.cpp  FileManager.h  main 2.cpp  main copy 22-02.cpp  main copy 24.cpp  main copy.cpp  main.cpp
project02/: CMakeLists.txt
project02/include/: Board.h  Generation.h  Individual.h  Life.h
project02/src/: Board.cpp  Generation.cpp  Individual.cpp  Life.cpp  main.cpp
(+141 files in other folders)
